--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-    <div class="contanier">
+    <nav>
         <!-- start nav -->
-        <div class="nav">
-          <div class="con50">
-            <div class="title">
-                <h2>company name</h2>
-              </div>
-              <ul>
-                  <li><a href="#Home">Home</a></li>
+        <div class="container">
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+            </label>
+                <h2 class="logo">company name</h2>
+              <ul class="list">
+                  <li class="active"><a href="#Home">Home</a></li>
                   <li><a href="#showcase">showcase</a></li>
                   <li><a href="#services">services</a></li>
                   <li><a href="#Designers">Designers</a></li>
                   <li><a href="#packages">packages</a></li>
                   <li><a href="#Contact">Contact</a></li>
               </ul>
-          </div>
-          <div class="image"><img src="images/menu.png" alt=""></div>
         </div>
+    </nav>
         <!-- end nav -->
         <!-- start section  -->
         <div class="section">
